Began App.js integration.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "flow-bin": "^0.60.1",
     "react": "^16.2.0",
+    "react-big-calendar": "^0.17.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.0.17",
     "styled-components": "^2.2.4"
