--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@storybook/addon-actions": "^3.2.17",
+    "@storybook/addon-info": "^3.2.17",
     "@storybook/addon-links": "^3.2.17",
     "@storybook/react": "^3.2.17",
     "husky": "^0.14.3",
