Added material-expansion-panel as a place holder

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "flow-bin": "^0.60.1",
+    "material-expansion-panel": "^1.0.0",
     "react": "^16.2.0",
     "react-big-calendar": "^0.17.0",
     "react-dom": "^16.2.0",
