--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "wasps-scheduling-system",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8000",
   "homepage": "https://mxs4321.github.io/WASPS-Scheduling-System",
   "dependencies": {
     "flow-bin": "^0.60.1",
@@ -10,6 +11,7 @@
     "react": "^16.2.0",
     "react-big-calendar": "^0.17.0",
     "react-dom": "^16.2.0",
+    "react-places-autocomplete": "^5.4.3",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
