--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "flow-bin": "^0.60.1",
     "gh-pages": "^1.1.0",
     "material-expansion-panel": "^1.0.0",
+    "moment": "^2.20.1",
     "react": "^16.2.0",
     "react-big-calendar": "^0.17.0",
     "react-dom": "^16.2.0",
