--- a/client/package.json
+++ b/client/package.json
@@ -49,6 +49,7 @@
     "husky": "^0.14.3",
     "lint-staged": "^6.0.0",
     "prettier": "^1.9.1",
-    "storybook-router": "^0.3.2"
+    "storybook-router": "^0.3.2",
+    "supertest": "^3.0.0"
   }
 }
