--- a/client/package.json
+++ b/client/package.json
@@ -42,14 +42,16 @@
     "extends": "react-app"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^3.2.17",
+    "@storybook/addon-actions": "^3.4.0-alpha.6",
     "@storybook/addon-info": "^3.2.17",
-    "@storybook/addon-links": "^3.2.17",
-    "@storybook/react": "^3.2.17",
+    "@storybook/addon-links": "^3.4.0-alpha.6",
+    "@storybook/react": "^3.4.0-alpha.6",
     "husky": "^0.14.3",
     "lint-staged": "^6.0.0",
     "prettier": "^1.9.1",
     "storybook-router": "^0.3.2",
-    "supertest": "^3.0.0"
+    "supertest": "^3.0.0",
+    "@storybook/addons": "^3.4.0-alpha.6",
+    "babel-core": "^6.26.0"
   }
 }
