--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "styled-components": "^2.2.4"
+    "styled-components": "^2.2.4",
+    "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
     "precommit": "lint-staged",
@@ -45,13 +46,13 @@
     "@storybook/addon-actions": "^3.4.0-alpha.6",
     "@storybook/addon-info": "^3.2.17",
     "@storybook/addon-links": "^3.4.0-alpha.6",
+    "@storybook/addons": "^3.4.0-alpha.6",
     "@storybook/react": "^3.4.0-alpha.6",
+    "babel-core": "^6.26.0",
     "husky": "^0.14.3",
     "lint-staged": "^6.0.0",
     "prettier": "^1.9.1",
     "storybook-router": "^0.3.2",
-    "supertest": "^3.0.0",
-    "@storybook/addons": "^3.4.0-alpha.6",
-    "babel-core": "^6.26.0"
+    "supertest": "^3.0.0"
   }
 }
