Hooked up react-router to redux

--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "flow-bin": "^0.60.1",
     "gh-pages": "^1.1.0",
+    "history": "^4.7.2",
     "material-expansion-panel": "^1.0.0",
     "moment": "^2.20.1",
     "react": "^16.2.0",
@@ -15,6 +16,7 @@
     "react-places-autocomplete": "^5.4.3",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
