--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "history": "^4.7.2",
     "material-expansion-panel": "^1.0.0",
     "moment": "^2.20.1",
+    "ramda": "^0.25.0",
     "react": "^16.2.0",
     "react-big-calendar": "^0.17.0",
     "react-dom": "^16.2.0",
