--- a/server/composer.json
+++ b/server/composer.json
@@ -7,6 +7,7 @@
     "phpunit/phpunit": "6"
   },
   "scripts": {
+    "start": "@php -S 0.0.0.0:8000",
     "test": [
       "@composer setupDB",
       "phpunit"
