--- a/server/composer.json
+++ b/server/composer.json
@@ -14,5 +14,8 @@
     "start": "@php -S 0.0.0.0:8000",
     "startDev": ["@composer setupTestDB", "@composer start"],
     "test": ["@composer setupTestDB", "phpunit"]
+  },
+  "config": {
+    "process-timeout":0
   }
 }
