--- a/server/composer.json
+++ b/server/composer.json
@@ -3,7 +3,8 @@
   "description": "Web API's for the wasps scheduling system",
   "require": {
     "twilio/sdk": "^5.16",
-    "guzzlehttp/guzzle": "^6.3"
+    "guzzlehttp/guzzle": "^6.3",
+    "vlucas/phpdotenv": "^2.4"
   },
   "require-dev": {
     "phpunit/phpunit": "6"
