--- a/server/.env
+++ b/server/.env
@@ -2,7 +2,7 @@ MYSQL_HOST="127.0.0.1"
 MYSQL_PORT="3306"
 MYSQL_DATABASE_NAME="wasps"
 MYSQL_USER="root"
-MYSQL_PASSWORD="NEW-ROOT-PASSWORD"
+MYSQL_PASSWORD=""
 
 TWILIO_SID="ACea262116e95f713800419bb929fb7cb1"
 TWILIO_TOKEN="9ce3a6c589d77a6ca15ca7a244f3f0c6"
