--- a/server/composer.json
+++ b/server/composer.json
@@ -10,8 +10,8 @@
     "phpunit/phpunit": "6"
   },
   "scripts": {
-    "setupTestDB": "@php setupTestDB.php",
-    "setupProductionDB": "@php setupProductionDB.php",
+    "setupTestDB": "@php tests/setupTestDB.php",
+    "setupProductionDB": "@php tests/setupProductionDB.php",
     "start": "@php -S 0.0.0.0:8000",
     "startDev": ["@composer setupTestDB", "@composer start"],
     "test": ["@composer setupTestDB", "phpunit"]
